--- a/GreenMarrow/src/views/Masters/Item.css
+++ b/GreenMarrow/src/views/Masters/Item.css
@@ -3,6 +3,8 @@
 .radio{margin-top:20px; margin-left:20;}
 
 .grid1{background-color: purple;color:white}
+.txt2{width:250px}
+
 
 body {
     font-family: Arial, Helvetica, sans-serif;
